--- a/myApp05/www/index.html
+++ b/myApp05/www/index.html
@@ -7,6 +7,7 @@
     <title></title>
     <link rel="stylesheet" href="http://code.ionicframework.com/1.0.0/css/ionic.css" />
     <link rel="stylesheet" href="css/style.css" />
+    <script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyDxqWGU8EQymyicmacWWh2MCOw-fyfLT4o"></script>
     <script src="http://code.ionicframework.com/1.0.0/js/ionic.bundle.js"></script>
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
