--- a/myApp05/www/menu.html
+++ b/myApp05/www/menu.html
@@ -9,18 +9,18 @@
 
   <ion-side-menu side="left">
     <header class="bar bar-header bar-stable">
-      <h1 class="title">Left</h1>
+      <h1 class="title">תפריט</h1>
     </header>
     <ion-content class="has-header">
       <ion-list>
-        <ion-item nav-clear menu-close href="#/app/search">
-          Search
+        <ion-item nav-clear menu-close href="#/restart">
+          דיווח חדש
         </ion-item>
         <ion-item nav-clear menu-close href="#/app/browse">
-          Browse
+          אודותנו
         </ion-item>
-        <ion-item nav-clear menu-close href="#/app/playlists">
-          Playlists
+        <ion-item nav-clear menu-close href="#/app/browse">
+          תנאי שימוש
         </ion-item>
       </ion-list>
     </ion-content>
