--- a/myApp05/www/index.html
+++ b/myApp05/www/index.html
@@ -16,6 +16,8 @@
     <script src="js/app.js"></script>
     <script src="js/services.js"></script>
     <script src="js/controllers.js"></script>
+    <script src="https://npmcdn.com/angular-toastr/dist/angular-toastr.tpls.js"></script>
+    <link rel="stylesheet" href="https://npmcdn.com/angular-toastr/dist/angular-toastr.css" />
   </head>
 
   <body ng-app="starter">
