--- a/Backend/frontEnd/backoffice/index.html
+++ b/Backend/frontEnd/backoffice/index.html
@@ -42,54 +42,42 @@
 		<script src="js/components/inputNumberComponent.js" ></script>
 		<script src="js/components/grid/ember-grid.js" ></script>
 		<script src="js/controllers/application.js" ></script>
-		<script src="js/controllers/userReports/store.js" ></script>
-		<script src="js/controllers/userReports/storesindex.js" ></script>
-		<script src="js/controllers/vehicles/vehicle.js" ></script>
-		<script src="js/controllers/vehicles/vehiclessindex.js" ></script>
+		<script src="js/controllers/userReports/userReports.js" ></script>
+		<script src="js/controllers/userReports/userReportsindex.js" ></script>
 		<script src="js/controllers/symptoms/symptoms.js" ></script>
 		<script src="js/controllers/symptoms/symptomsindex.js" ></script>
 		<script src="js/controllers/users/users.js" ></script>
 		<script src="js/controllers/users/usersindex.js" ></script>
-		<script src="js/controllers/vehiclespeedrules/index.js" ></script>
 		<script src="js/routes/application.js" ></script>
 		<script src="js/routes/index.js" ></script>
 		<script src="js/routes/settings.js" ></script>
 		<script src="js/routes/userReports/edit.js" ></script>
 		<script src="js/routes/userReports/index.js" ></script>
-		<script src="js/routes/userReports/polygon.js" ></script>
-		<script src="js/routes/vehicles/edit.js" ></script>
-		<script src="js/routes/vehicles/index.js" ></script>
 		<script src="js/routes/symptoms/edit.js" ></script>
 		<script src="js/routes/symptoms/index.js" ></script>
+		<script src="js/routes/symptoms/polygon.js" ></script>
 		<script src="js/routes/users/edit.js" ></script>
 		<script src="js/routes/users/index.js" ></script>
-		<script src="js/routes/vehiclespeedrules/index.js" ></script>
 
 		<script type="text/javascript">
 			TemplatesHelper.load([
 				'application',
 				'empty',
 				'index',
+				'symptoms/confirm',
+				'symptoms/index',
+				'symptoms/modal',
+				'symptoms/polygon',
+				'symptoms/grid/actions',
 				'application/login',
 				'userReports/confirm',
 				'userReports/index',
 				'userReports/modal',
-				'userReports/polygon',
 				'userReports/grid/actions',
-				'symptoms/confirm',
-				'symptoms/index',
-				'symptoms/modal',
-				'symptoms/grid/actions',
-								'users/confirm',
+				'users/confirm',
 				'users/index',
 				'users/modal',
-				'users/grid/actions',
-				'vehicles/confirm',
-				'vehicles/index',
-				'vehicles/modal',
-				'vehicles/grid/actions',
-				'vehiclespeedrules/index',
-				'vehiclespeedrules/grid/actions'
+				'users/grid/actions'
 			]);
 		</script>
 
